@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-11-19T08:26:49Z",
+  "timestamp" : "2022-11-20T02:03:22Z",
   "count_outdated" : 891,
   "uniques_outdated" : 468,
-  "count" : 905,
+  "count" : 906,
   "uniques" : 477,
   "clones" : [
     {
@@ -49,8 +49,8 @@
     },
     {
       "timestamp": "2022-11-19T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
