@@ -1,3 +1,11 @@
+2022-11-20T02:03:22Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3506052394 # 1048
+* notice: last 14d: unq all: 3 15
+* notice: prev accum: outdated-unq outdated-all / unq all: 468 891 / 477 905
+* notice: next accum: outdated-unq outdated-all / unq all: 468 891 / 477 906
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-11-19]
+
 2022-11-19T08:26:49Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3502755861 # 1046
 * notice: last 14d: unq all: 3 14
